Fixed the issue, text is now centered even on smaller sizes.

--- a/src/containers/styles/splashscreen.css
+++ b/src/containers/styles/splashscreen.css
@@ -9,6 +9,10 @@
     margin-bottom: 10px;
 }
 
+.splashscreen > h1 {
+    text-align: center;
+}
+
 .splashscreen-logo {
 	margin-top: 30px;
 	width: 80%;
